最简单的例子